# sdc

./: .bandit  .clang-format  .coveragerc  .coveralls.yml  .env  .gitattributes  .gitignore  .pep8speaks.yml  .travis.yml  LICENSE.md  MANIFEST.in  README.rst  azure-pipelines.yml  data_100000.csv  environment.yml  kde.parquet  render_recipe.yaml  requirements.txt  runtests.py  setup.cfg  setup.py  test_create_multiindex.py  test_import-hooks.py  vtune.py  vtune_integration.py
.devcontainer/: Dockerfile  devcontainer.json
Intel_Scalable_Dataframe_Compiler.egg-info/: PKG-INFO  SOURCES.txt
asv_bench/: README.md  asv.conf.json  build_hpat.py  clone_repo.py
benchmarks/: census_benchmark.py  exchange_benchmark.py
buildscripts/: after_success.sh  autogen_sources.py  autogen_sources_methods.py  azure-template-linux-macos.yml  azure-template-windows.yml  build.py  build.sh  build_doc.py  code_style.sh  coverage.sh  environment-build.yml  install_conda.bat  install_conda.sh  run_benchmarks.py  run_examples.py  sdc_pi_example.py  setup_conda.sh  test.py  test.sh  test_conda_install.py  utilities.py
conda-recipe/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
docker/: Dockerfile  docker-compose.yml
docs/: CleanRSTfiles.py  Documentation_Guidelines.txt  Makefile  README.rst  conf.py  gh-pages.py  index.rst  rename_function.py
examples/: Basic_DataFrame.py  accel_example.py  basic.ipynb  basic_usage_nyse_predict.py  basic_workflow.py  basic_workflow_batch.py  basic_workflow_parallel.py  d4p_kmeans.py  d4p_linreg.py  dataframe_append.py  dataframe_pct_change.py  employees.csv  employees_batch1.csv  employees_batch2.csv  gdb_cmd  hiframes_concat.py  hiframes_cumsum.py  hiframes_filter.py  hiframes_merge.py  hiframes_pivot.py  hiframes_rolling.py  hiframes_shift.py  hiframes_sort.py  intraday_mean.py  intraday_mean_rand.py  k-means.py  kernel_density_estimation.py  kernel_density_estimation_pq.py  kernel_density_estimation_pq_hdfs.py  linear_regression.py  logistic_regression.py  logistic_regression_hdf5.py  logistic_regression_rand.py  ml_mnb.py  ml_svc.py  pi.py  ros_example1.py  run_dnn.ipynb  series_argsort.py  series_at.py  (+19 more)
experimental/: daal4py_ext.py
generate_data/: all_syms.csv  gen_employees_csv.py  gen_kde.py  gen_kde_pq.py  gen_linear_regression.py  gen_logistic_regression.py  stock_data_read.py
hpat/: .distributed.py.swp  __init__.py  _csv.cpp  _csv.h  _cv.cpp  _daal.cpp  _datetime_ext.cpp  _datetime_ext.h  _dict_ext.cpp  _distributed.c  _distributed.cpp  _distributed.h  _hiframes.cpp  _hpat_common.h  _hpat_sort.h  _import_py.h  _io.c  _io.cpp  _meminfo.h  _parquet.cpp  _parquet_impl.cpp  _quantile_alg.cpp  _ros.cpp  _set_ext.cpp  _str_decode.cpp  _str_ext.cpp  _version.py  _xe_wrapper.cpp  bind.py  (+40 more)
parquet_reader/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  all_gitignore  config.h  config.h.in~  config.status  configure  configure.ac  hpat_parquet_reader.cpp  libtool  ltmain.sh
parquet_reader/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
parquet_reader/src/: Makefile  Makefile.am  Makefile.in  hpat_parquet_reader.lo  libhpat_parquet_reader.la
parquet_reader/src/.deps/: hpat_parquet_reader.Plo
parquet_reader/src/.libs/: libhpat_parquet_reader.la  libhpat_parquet_reader.lai  libhpat_parquet_reader.so.0  libhpat_parquet_reader.so.0.0.0
(+1522 files in other folders)
