#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hpat-parquet-reader], [0.1], [ehsan.tn@gmail.com])
AM_INIT_AUTOMAKE(hpat-parquet-reader, 0.1)
AC_OUTPUT(Makefile src/Makefile)

AC_CONFIG_SRCDIR([src/hpat_parquet_reader.cpp])
AC_CONFIG_HEADERS([config.h])
LT_INIT
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.

AC_OUTPUT
